@@ -44,14 +44,14 @@ class test_find_cycle(unittest.TestCase):
         G.add_edge(1, 5)
         G.add_edge(3, 5)
         # Cycles: 1-2-4-5, 3-2-4-5 and 1-2-3-5
-        assert find_cycle(G, directed=False) == [2,3,5,4]
+        assert find_cycle(G) == [2,3,5,4]
 
     def testNoCycleGraph(self):
         G = pygraph.graph()
         G.add_nodes([1,2,3])
         G.add_edge(1, 2)
         G.add_edge(1, 3)
-        assert find_cycle(G, directed=False) == []
+        assert find_cycle(G) == []
 
     def testDigraph(self):
         G = pygraph.digraph()
@@ -62,7 +62,7 @@ class test_find_cycle(unittest.TestCase):
         G.add_edge(4, 5)
         G.add_edge(5, 1)
         # Cycle: 1-2-4-5
-        assert find_cycle(G, directed=True) == [1,2,4,5]
+        assert find_cycle(G) == [1,2,4,5]
     
     def testNoCycleDigraph(self):
         G = pygraph.digraph()
@@ -72,7 +72,7 @@ class test_find_cycle(unittest.TestCase):
         G.add_edge(2, 4)
         G.add_edge(4, 5)
         G.add_edge(3, 5)
-        assert find_cycle(G, directed=True) == []
+        assert find_cycle(G) == []
     
     def testNoCycleDigraph2(self):
         G = pygraph.digraph()
@@ -80,7 +80,7 @@ class test_find_cycle(unittest.TestCase):
         G.add_edge(1,2)
         G.add_edge(1,3)
         G.add_edge(2,3)
-        assert find_cycle(G, directed=True) == []
+        assert find_cycle(G) == []
     
 
     def testMisleadingDigraph(self):
@@ -92,7 +92,7 @@ class test_find_cycle(unittest.TestCase):
         G.add_edge(4, 5)
         G.add_edge(3, 5)
         G.add_edge(3, 1)
-        assert find_cycle(G, directed=True) == [1, 2, 3]
+        assert find_cycle(G) == [1, 2, 3]
     
     def testSmallCycleDigraph(self):
         G = pygraph.digraph()
@@ -103,4 +103,4 @@ class test_find_cycle(unittest.TestCase):
         G.add_edge(4, 5)
         G.add_edge(2, 1)
         # Cycle: 1-2
-        assert find_cycle(G, directed=True) == [1,2]
+        assert find_cycle(G) == [1,2]
